--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,14 +9,15 @@
 
   <div fxFlex>
     <mat-grid-list fxFlex cols="2" rowHeight="200px">
-      <mat-grid-tile *ngFor="let dish of dishes">
+      <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
         <img height="200px" matListAvatar src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
           <h1 matLine>{{dish.name | uppercase}}</h1>
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
+  </div>
 
-
-
+<app-dishdetail [dish]="selectedDish"></app-dishdetail>
 </div>
+
