Assignment: Angular Services, Routing and Single applications

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,13 +1,13 @@
-<div class="container" fxLayout="column" fxLayout="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
-  <div fxFle>
+  <div fxFlex>
     <div>
       <h3> Contact us</h3>
       <hr>
     </div>
   </div>
 
-  <div fxFle>
+  <div fxFlex>
     <h3>Location Information</h3>
     <div fxLayout="column" fxLayout.gt-sm="row">
       <div fcFlex="50" fxFlexOffset="20px">
@@ -22,12 +22,15 @@
           <a href="mailto:confusion@food.net">confusion@food.net</a>
         </address>
         <p></p>
+
         <div>
           <a mat-raised-button heref="tel:+85212345678"><i class="fa fa-phone"></i>Call</a>
           <a mat-raised-button><i class="fa fa-skype"></i>Skype</a>
           <a mat-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i>E-mail</a>
         </div>
       </div>
+
+
       <div fxFlex="40">
         <h4>Map of our location</h4>
       </div>
