--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,10 @@ $divider-color: #BDBDBD;
 .material-icons{
   font-family: 'Material Icons' !important;
 }
+
+.circle-img{
+  border-radius: 50%;
+  width: 40px;
+}
+
+
