--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -37,5 +37,8 @@
       <p></p>
       <p></p>
     </mat-list>
+    <div fxFlex [hidden]="dish">
+      <mat-spinner></mat-spinner> <h4>Loading... Please wait</h4>
+    </div>
 
   </div>
