--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -15,9 +15,16 @@
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail',prev]" >
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
         <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail',next]" >
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
       </mat-card-actions>
     </mat-card>
 
@@ -30,15 +37,11 @@
         <h4 matLine>{{Comments.comment}}</h4>
         <p matLine>{{Comments.rating}} Stars</p>
         <p matLine>
-        <span>-- {{Comments.author}} {{Comments.date | date: 'MMM. dd, yyyy'}}</span>
+          <span>-- {{Comments.author}} {{Comments.date | date: 'MMM. dd, yyyy'}}</span>
         </p>
         <br>
       </mat-list-item>
       <p></p>
       <p></p>
     </mat-list>
-    <div fxFlex [hidden]="dish">
-      <mat-spinner></mat-spinner> <h4>Loading... Please wait</h4>
-    </div>
-
   </div>
