--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -81,7 +81,7 @@
       </table>
       <p>
         <mat-form-field class="full-width">
-          <textarea matInput nformControlName="message" placeholder="Your Feedback" rows=12></textarea>
+          <textarea matInput nformControlName="message" rows=12 placeholder="Your feedback"></textarea>
         </mat-form-field>
       </p>
       <button type="submit" mat-button class="background-primary text-floral-white"
