--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -10,19 +10,19 @@
         </mat-card-title>
 
       </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+      <img mat-card-image src={{BaseURL + dish.image}} alt={{dish.name}}>
       <mat-card-content>
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button [routerLink]="['/dishdetail',prev]" >
+        <button mat-button [routerLink]="['/dishdetail',prev]">
           <span class="fa fa-chevron-left fa-lg"></span>
         </button>
         <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
         <span class="flex-spacer"></span>
-        <button mat-button [routerLink]="['/dishdetail',next]" >
+        <button mat-button [routerLink]="['/dishdetail',next]">
           <span class="fa fa-chevron-right fa-lg"></span>
         </button>
       </mat-card-actions>
@@ -43,5 +43,51 @@
       </mat-list-item>
       <p></p>
       <p></p>
+      <mat-list-item>
+        <p>{{ commentForm.value | json }}</p>
+        <h4 matLine>{{commentForm.value.comment}}</h4>
+        <p matLine>{{commentForm.value.rating}} Stars</p>
+        <p matLine>
+          <span>-- {{commentForm.value.author}} {{commentForm.value.date | date: 'MMM. dd, yyyy'}}</span>
+        </p>
+        <br>
+
+      </mat-list-item>
+      <mat-list>
+        <div fxFlex fxFlexOffset="40px" class="form-size">
+          <h3>Send us your feedback</h3>
+          <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+            <p>
+              <mat-form-field class="half-width">
+                <mat-label>Name</mat-label>
+                <input matInput formControlName="author" type="text" required placeholder="Name">
+                <mat-error *ngIf="formErrors.author">
+                  {{formErrors.author}}
+                </mat-error>
+              </mat-form-field>
+            <p></p>
+            <table class="form-size">
+              <td>
+                <p>Choose the rating:</p>
+                <mat-slider color="primary" min="1" max="5" step="1" thumbLabel="true" tickInterval="1" formControlName="rating">
+                  <input matSliderThumb>
+                </mat-slider>
+                <p></p>
+                <mat-form-field class="full-width">
+                  <textarea matInput nformControlName="comment" rows=12 placeholder="Your Comment" required></textarea>
+                  <mat-error *ngIf="formErrors.comment">
+                    {{formErrors.comment}}
+                  </mat-error>
+                </mat-form-field>
+              </td>
+            </table>
+            <button type="submit" mat-button class="background-primary text-floral-white"
+              [disabled]="commentForm.invalid">Submit</button>
+            <p></p>
+            <p></p>
+          </form>
+        </div>
+      </mat-list>
     </mat-list>
+
   </div>
